# Torrentina

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md
examples/: loopback_download.rs
gui/: Cargo.toml  tauri.conf.json
gui/capabilities/: default.json
gui/icons/: icon.icns
gui/src/: main.rs
src/: disk.rs  error.rs  lib.rs  main.rs  metainfo.rs
src/download/: bitfield.rs  mod.rs  piece.rs  state.rs  stats.rs
src/peer/: connection.rs  handshake.rs  message.rs  mod.rs
src/tracker/: http.rs  mod.rs  udp.rs
