[package]
name = "torrentina-gui"
version = "0.1.0"
edition = "2021"
description = "Desktop GUI for the Torrentina BitTorrent client."
license = "MIT"
authors = ["Roger Pettersen <roger.pettersen90@gmail.com>"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
torrentina = { path = ".." }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
